@@ -1,8 +1,9 @@
-2022-11-18
+2023-01-13
 
         * Version 2.1.0 released
         ========================
 
+        Fix segfault on saving empty GModelSpectralTable (#4198)
         Implement response vector cache storage in FITS file (#4159)
         Add GCOMObservation::npred() method
         Add optional energy scaling in GModelSpectralTable class (#4069)
